[package]
name = "example_rust"
version = "0.1.0"
authors = ["Marc-André Moreau <marcandre.moreau@gmail.com>"]

[lib]
crate-type = ["dylib"]
path = "source/plugin_example.rs"

[dependencies]
hex = { path = "../libimhex-rust" }

[profile.release]
opt-level = 0 # TODO: Fix this when Rust has support for force-exporting symbols
