[package]
name = "hex"
version = "0.1.0"
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macros = { path = "proc_macros" }
imgui = "0.8.0"

cxx = "1.0.55"

[build-dependencies]
cxx-build = "1.0.55"

[patch.crates-io]
imgui-sys = { path = "imgui-sys" }